--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -1,3 +1,5 @@
+name: Update README.md
+
 on:
   workflow_dispatch: {}
   schedule:
@@ -11,7 +13,7 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
 
       - run: |
           git config user.name "${{ github.triggering_actor }}"
