--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -18,10 +18,13 @@ jobs:
       - run: |
           git config user.name "${{ github.triggering_actor }}"
           git config user.email "${{ secrets.NOREPLY_EMAIL }}"
-
+          
+      # https://github.com/nodejs/corepack/issues/612
       - run: |
+          npm install --global corepack@latest
           corepack enable pnpm
           pnpm i
           pnpm dlx jiti ./scripts/readme.ts
-        env:
-          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      env:
+        TOKEN: ${{ secrets.GITHUB_TOKEN }}
