chore: Improves workflow outputs and clarifies notice messages
Adds explicit workflow output for README updates to improve downstream integration.
Refines notice messages for better clarity in challenge addition and README update scripts.
Enhances maintainability and feedback for automation processes.

--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -12,6 +12,9 @@ jobs:
     env:
       TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+    outputs:
+      updated: ${{ steps.update_readme.outputs.updated }}
+
     steps:
       - uses: actions/checkout@v4
 
@@ -23,9 +26,9 @@ jobs:
         run: |
           git config user.name "${{ github.triggering_actor }}"
           git config user.email "${{ vars.NOREPLY_EMAIL }}"
-          
 
       - name: Update README.md
+        id: update_readme
         run: |
           bun install
           bun ./scripts/readme.ts
