--- a/.github/workflows/add.yml
+++ b/.github/workflows/add.yml
@@ -8,11 +8,10 @@ jobs:
   main:
     runs-on: ubuntu-latest
 
-    env:
-      TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
+        with:
+          persist-credentials: true
 
       - uses: oven-sh/setup-bun@v2
         with:
