--- a/.github/workflows/readme.yml
+++ b/.github/workflows/readme.yml
@@ -9,14 +9,13 @@ jobs:
   main:
     runs-on: ubuntu-latest
 
-    env:
-      TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
     outputs:
       updated: ${{ steps.update_readme.outputs.updated }}
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
+        with:
+          persist-credentials: true
 
       - uses: oven-sh/setup-bun@v2
         with:
@@ -25,6 +24,7 @@ jobs:
       - name: Setup Git
         run: |
           git config user.name "${{ github.triggering_actor }}"
+          # The NOREPLY_EMAIL setting on https://github.com/lvjiaxuan/type-challenges/settings/variables/actions
           git config user.email "${{ vars.NOREPLY_EMAIL }}"
 
       - name: Update README.org.md
