chore: add all new challenges. (#1)
* chore: add all

* docs: sync from org.

* chore: add all working.

* Revert "docs: sync from org."

This reverts commit 8c43c2cd5491a52431061106209a2e39447d6c16.

* docs: sync from org.

* chore: rename

chore: add new challenge(s).

test

test

* Revert "docs: sync from org."

This reverts commit 5eaefb6c13bb25b0f43b75d412b786aeba7e6bfd.

* docs: sync from org.

* chore: pull before push

* Revert "docs: sync from org."

This reverts commit 4f447fda845a9377ebd3e082926ccbb040c24124.

* chore: debugging

* docs: sync from org.

* chore: add new challenge(s).

--- a/.github/workflows/add.yml
+++ b/.github/workflows/add.yml
@@ -1,4 +1,4 @@
-name: Add new challenge
+name: Add new challenge(s)
 
 on:
   workflow_dispatch: {}
@@ -8,11 +8,10 @@ jobs:
   main:
     runs-on: ubuntu-latest
 
-    env:
-      TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
+        with:
+          persist-credentials: true
 
       - uses: oven-sh/setup-bun@v2
         with:
@@ -23,8 +22,7 @@ jobs:
           git config user.name "${{ github.triggering_actor }}"
           git config user.email "${{ vars.NOREPLY_EMAIL }}"
 
-      - name: Add new challenge
+      - name: Add new challenge(s)
         run: |
           bun install
           bun ./scripts/add.ts
-
