--- a/.github/workflows/update-deps.yml
+++ b/.github/workflows/update-deps.yml
@@ -3,7 +3,7 @@ name: Update Dependencies
 on:
   workflow_dispatch: {}
   schedule:
-    - cron: 0 0 * * SAT
+    - cron: 0 0 1 * *
 
 jobs:
   update-deps:
